configuration/includes/jumphost/files/manifests-samples/external-lb-l7.yaml
# External L7 LB using Ingress

# https://cloud.google.com/kubernetes-engine/docs/how-to/load-balance-ingress

# Check "kubectl get ingress" to find the IP to connect.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-lb-l7
  annotations:
    kubernetes.io/ingress.class: "gce" # not specified defaults to "gce"
spec:
  rules:
  - http:
      paths: # list for multiple SVCs or individual Ingresses
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: external-lb-l7
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: external-lb-l7
spec:
  type: NodePort
  selector:
    app: external-lb-l7
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9376

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-lb-l7
  labels:
    app: external-lb-l7
spec:
  selector:
    matchLabels:
      app: external-lb-l7
  replicas: 3
  template:
    metadata:
      labels:
        app: external-lb-l7
    spec:
      containers:
      - image: k8s.gcr.io/serve_hostname:v1.4
        name: external-lb-l7
        ports:
        - containerPort: 9376
          protocol: TCP
